# cspot

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  README.md  base64.cpp  default.nix  flake.nix  httpserver.h  oo.py  result  test.cpp  test.go  test.py
.devcontainer/: devcontainer.json
.github/scripts/: run-clang-format.py
.github/workflows/: c-cpp.yml  (+2 more)
cli/: CMakeLists.txt  main.cpp
cspot/: CMakeLists.txt  README.md  meson.build
cspot/builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  cspot
cspot/builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-projectinfo.json  intro-targets.json  meson-info.json
cspot/builddir/meson-logs/: meson-log.txt
cspot/builddir/meson-private/: cmd_line.txt  coredata.dat.prev
cspot/cmake/: FindMbedTLS.cmake  generate_protos.sh
cspot/include/: AccessKeyFetcher.h  ApResolve.h  Assert.h  AudioChunk.h  AudioChunkManager.h  AudioSink.h  AuthChallenges.h  Authentication.h  CDNAudioFile.h  CDNTrackStream.h  CSpotContext.h  ChunkedAudioStream.h  ChunkedByteStream.h  ConfigJSON.h  Connection.h  ConstantParameters.h  Crypto.h  CryptoMbedTLS.h  CryptoOpenSSL.h  CspotAssert.h  DiffieHellman.h  EventManager.h  FileHelper.h  JSONObject.h  Keyexchange.h  Logger.h  LoginBlob.h  Mercury.h  MercuryManager.h  MercuryResponse.h  MercurySession.h  Metadata.h  NanoPBHelper.h  PBUtils.h  Packet.h  PbCommon.h  PbReader.h  PbWireType.h  PbWriter.h  PlainConnection.h  (+31 more)
cspot/include/platform/: WrappedMutex.h  WrappedSemaphore.h
cspot/include/platform/unixlike/: WrappedMutex.h
cspot/include/platform/win32/: WrappedMutex.h
cspot/include/protosranie/: APChallenge.h  APResponseMessage.h  AudioFile.h  AudioFormat.h  AuthenticationType.h  BuildInfo.h  Capability.h  CapabilityType.h  ClientHello.h  ClientResponseEncrypted.h  ClientResponsePlaintext.h  CpuFamily.h  CryptoResponseUnion.h  Cryptosuite.h  DeviceState.h  Episode.h  FeatureSet.h  Frame.h  Header.h  LoginCredentials.h  LoginCryptoChallengeUnion.h  LoginCryptoDiffieHellmanChallenge.h  LoginCryptoDiffieHellmanHello.h  LoginCryptoDiffieHellmanResponse.h  LoginCryptoHelloUnion.h  LoginCryptoResponseUnion.h  MessageType.h  Os.h  Platform.h  PlayStatus.h  PoWResponseUnion.h  Product.h  ReflectEnumValue.h  ReflectField.h  ReflectType.h  ReflectTypeID.h  ReflectTypeKind.h  State.h  SystemInfo.h  Track.h  (+2 more)
cspot/proto/: .gitignore  CMakeLists.txt
cspot/proto/src/: authentication.proto  keyexchange.proto  mercury.proto  metadata.proto
cspot/protobuf/: authentication.options  authentication.proto  keyexchange.options  keyexchange.proto  login5.options  login5.proto  mercury.options  mercury.proto  metadata.options  metadata.proto  spirc.options  spirc.proto
cspot/protocol/: metadata.proto
cspot/protocol/impl/: ad-hermes-proxy.pb.h  appstore.pb.h  facebook-publish.pb.c  facebook.pb.c  keyexchange.pb.h  metadata.pb.c  metadata.pb.h  popcount.pb.c  presence.pb.c  pubsub.pb.h  radio.pb.c  spirc.pb.h
cspot/protocol/proto/: keyexchange.options  keyexchange_pb2.py  mercury.options  metadata.options  metadata.proto  simple.proto  spirc.options
cspot/src/: AccessKeyFetcher.cpp  AnyRefImpl.cpp  ApResolve.cpp  AudioChunk.cpp  AudioChunkManager.cpp  AuthChallenges.cpp  Base64.cpp  CDNAudioFile.cpp  CDNTrackStream.cpp  ChunkedAudioStream.cpp  ChunkedByteStream.cpp  ConfigJSON.cpp  Connection.cpp  CryptoMbedTLS.cpp  CryptoOpenSSL.cpp  DiffieHellman.cpp  EventManager.cpp  JSONObject.cpp  Logger.cpp  LoginBlob.cpp  MercuryManager.cpp  MercuryResponse.cpp  MercurySession.cpp  NanoPBHelper.cpp  PBUtils.cpp  Packet.cpp  PbReader.cpp  PbWriter.cpp  PlainConnection.cpp  PlaybackState.cpp  Player.cpp  PlayerContext.cpp  PlayerState.cpp  Protobuf.cpp  ReflectTypeInfo.cpp  Semaphore.cpp  Session.cpp  Shannon.cpp  ShannonConnection.cpp  SpircController.cpp  (+16 more)
cspot/src/platform/apple/: WrappedSemaphore.cpp
cspot/src/platform/esp/: WrappedSemaphore.cpp
cspot/src/platform/linux/: WrappedSemaphore.cpp
docker/: Dockerfile  docker-compose.yml
include/: AudioChunk.h  ChunkedAudioStream.h  DiffieHellman.h  MercuryManager.h  MercuryResponse.h  NamedPipeAudioSink.h  PBUtils.h  Packet.h  PlainConnection.h  Player.h  Session.h  ShannonConnection.h  SpircController.h  SpotifyTrack.h  Task.h  Utils.h  aes.h  base64.h  hmac.h  pb.h  pb_decode.h  sha1.h
py/: auth.py  authtoken.py  blob.py  connect.py  connection.py  connector.py  main.py  mercury.py  minia.py  parameter.py  process_proto.py  requirements.txt  session.py  shannon.py  spirc.py  spotify.py  test.go  test.py  utils.py  webserver.py  zeroauth.py  zeroconf_server.py
src/: AudioChunk.cpp  AudioChunkManager.cpp  ChunkedAudioStream.cpp  DiffieHellman.cpp  MercuryManager.cpp  MercuryResponse.cpp  PBUtils.cpp  Packet.cpp  PlainConnection.cpp  Player.cpp  SHA1.cpp  Session.cpp  ShannonConnection.cpp  SpircController.cpp  SpotifyTrack.cpp  Utils.cpp  main.cpp  pb_decode.c  session.cpp  sha1.c  stb_vorbis.c
targets/cli/: ALSAAudioSink.cpp  ALSAAudioSink.h  CMakeLists.txt  CliFile.cpp  CliFile.h  CliPlayer.cpp  CliPlayer.h  CommandLineArguments.cpp  CommandLineArguments.h  NamedPipeAudioSink.cpp  PortAudioSink.cpp  PortAudioSink.cpp.d  PortAudioSink.h  PortAudioSink.h.d  README.md  main.cpp
targets/cli/cmake/: Findportaudio.cmake
targets/esp32/components/cspot/: CMakeLists.txt
targets/esp32/main/: CMakeLists.txt  ESPFile.cpp  ESPFile.h  ESPStatusLed.cpp  ESPStatusLed.h  EspPlayer.cpp  EspPlayer.h  I2SAudioSink.cpp  I2SAudioSink.h  Kconfig.projbuild  VSPlayer.cpp  VSPlayer.h  VSinit.h  ac101.c  ac101.h  main.cpp
targets/esp32/main/sinks/: AC101AudioSink.cpp  AC101AudioSink.h  BufferedAudioSink.cpp  BufferedAudioSink.h  ES8311AudioSink.cpp  ES8311AudioSink.h  ES8388AudioSink.cpp  ES8388AudioSink.h  ES9018AudioSink.cpp  ES9018AudioSink.h  I2SAudioSink.cpp  I2SAudioSink.h  InternalAudioSink.cpp  InternalAudioSink.h  PCM5102AudioSink.cpp  PCM5102AudioSink.h  SPDIFAudioSink.cpp  SPDIFAudioSink.h  TAS5711AudioSink.cpp  TAS5711AudioSink.h  ac101.c  adac.h
(+59 files in other folders)
